Added SASS styles for basic ui and dashboard ui.

--- a/app/views/layouts/dashboard.html.haml
+++ b/app/views/layouts/dashboard.html.haml
@@ -6,7 +6,7 @@
           %link{ :rel => "shortcut icon", :href => "/favicon.ico", :type => "image/x-icon"}/
           %title= yield :title
 
-          = stylesheet_link_tag 'screen.css', :media => 'screen, projection'
+          = stylesheet_link_tag 'screen-dash.css', :media => 'screen, projection'
           = stylesheet_link_tag 'print.css', :media => 'print'
           /[if IE]
                = stylesheet_link_tag 'ie.css', :media => 'screen, projection'
