Changed placeholders to be more intuitive. Added mixin for content style (more DRY).

--- a/app/stylesheets/_basic-style.sass
+++ b/app/stylesheets/_basic-style.sass
@@ -11,3 +11,9 @@ h2
           size: 160%
      text:
           align: center
+
+@mixin content-style
+     padding: 0.5em
+     border: thin solid black
+     background:
+          color: green
