--- a/app/stylesheets/screen-dash.sass
+++ b/app/stylesheets/screen-dash.sass
@@ -1,6 +1,4 @@
 @import _basic-style
 
 #content
-     border: thin solid black
-     background:
-          color: green
+     @include content-style
