--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -11,8 +11,6 @@
                color: yellow
 
      #tab-content
+          @include content-style
           margin:
                left = !tab-width + 1%
-          border: thin solid black
-          background:
-               color: green
