--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,12 +1,14 @@
 #header
 
-     #logo
-          %h1 Tenttiarkisto
-
      #general
 
           #login This is the login area
+          %ul#links
+               %li= link_to('FAQ', faq_url)
+
+     #logo
+          %h1 Tenttiarkisto
 
 #search Search comes here
 
-#crumbs Here comes crumb
+#crumbs Here &gt; comes &gt; crumb
