--- a/app/stylesheets/_header.sass
+++ b/app/stylesheets/_header.sass
@@ -2,6 +2,7 @@ html, body
      margin: 0
 
 #container
+     margin: 1em
 
      #header
 
@@ -9,12 +10,23 @@ html, body
                color: blue
 
           #logo
-               color: red
+               background:
+                    color: red
+               width: auto
 
           #general
+               float: right
 
                #login
+                    background:
+                         color: purple
+               #links
+                    background:
+                         color: pink
 
      #search
+          clear: both
+          padding:
+               top: 1em
 
      #crumbs
