Fixed layout for views. Modified features to use new layout.

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -7,7 +7,7 @@
                %li= link_to('FAQ', faq_url)
 
      #logo
-          %h1 Tenttiarkisto
+          %h1= link_to('Tenttiarkisto', root_url)
 
 #search Search comes here
 
