--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,10 +17,6 @@
 
                = render :partial => "layouts/header"
 
-               #content
-
-                    #tabs Tabs come here
-
-                    #tab-content= (yield :content or yield)
+               #content= (yield :content or yield)
 
                = render :partial => "layouts/footer"
