--- a/app/views/layouts/exams.html.haml
+++ b/app/views/layouts/exams.html.haml
@@ -6,7 +6,7 @@
           %link{ :rel => "shortcut icon", :href => "/favicon.ico", :type => "image/x-icon"}/
           %title= yield :title
 
-          = stylesheet_link_tag 'screen-dash.css', :media => 'screen, projection'
+          = stylesheet_link_tag 'screen-exam.css', :media => 'screen, projection'
           = stylesheet_link_tag 'print.css', :media => 'print'
           /[if IE]
                = stylesheet_link_tag 'ie.css', :media => 'screen, projection'
@@ -17,6 +17,10 @@
 
                = render :partial => "layouts/header"
 
-               #content= (yield :content or yield)
+               #content
+
+                    #tabs Tabs come here
+
+                    #tab-content= (yield :content or yield)
 
                = render :partial => "layouts/footer"
