Tabs work. Code's not pretty tho. Still needs stylesheet.

--- a/app/views/exams/new.html.haml
+++ b/app/views/exams/new.html.haml
@@ -1,1 +1,8 @@
+
+%ul(id="tabs")
+     %li= link_to('Kaikki kokeet', :exams)
+     %li= link_to('Generoi', '/courses/1/exams/generate')
+     %li= link_to('Lisää koe', '/courses/1/exams/new')
+
+
 %h1 Laskennan mallit - Lisää uusi tentti
