--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -11,3 +11,14 @@
   You _must_ remember to redefine your own outline, as it’s an important accessibility aid. E.g.
   *:focus
     outline: #ccc dotted medium
+
+ 
+     ul#tabs
+          margin: 0
+          padding: 0
+          list-style-type: none
+          float: left
+     
+          li
+               a
+                    float: left
