--- a/app/views/exams/index.html.haml
+++ b/app/views/exams/index.html.haml
@@ -1,3 +1,10 @@
+
+%ul(id="tabs")
+     %li= link_to('Kaikki kokeet', :exams)
+     %li= link_to('Generoi', '/courses/1/exams/generate')
+     %li= link_to('Lisää koe', '/courses/1/exams/new')
+
+
 %h1 Laskennan mallit
 
 %ul
