Made the code a little cleaner.

--- a/app/views/exams/generate.html.haml
+++ b/app/views/exams/generate.html.haml
@@ -1,9 +1,6 @@
 
 
-%ul(id="tabs")
-     %li= link_to('Kaikki kokeet', :exams)
-     %li= link_to('Generoi', '/courses/1/exams/generate')
-     %li= link_to('Lisää koe', '/courses/1/exams/new')
+= render :partial => "layouts/tabs"
 
 
 %h1 Laskennan mallit - Generoi harjoitustentti
