--- a/app/views/exams/index.html.haml
+++ b/app/views/exams/index.html.haml
@@ -1,8 +1,5 @@
 
-%ul(id="tabs")
-     %li= link_to('Kaikki kokeet', :exams)
-     %li= link_to('Generoi', '/courses/1/exams/generate')
-     %li= link_to('Lisää koe', '/courses/1/exams/new')
+= render :partial => "layouts/tabs"
 
 
 %h1 Laskennan mallit
