--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,8 @@
 
           = stylesheet_link_tag 'screen.css', :media => 'screen, projection'
           = stylesheet_link_tag 'print.css', :media => 'print'
+          = javascript_include_tag 'crumbs'
+
           /[if IE]
                = stylesheet_link_tag 'ie.css', :media => 'screen, projection'
 
