Added searchbox and magnifying glass image.

--- a/app/stylesheets/_header.sass
+++ b/app/stylesheets/_header.sass
@@ -28,6 +28,13 @@ html, body
           clear: both
           padding:
                top: 1em
+          input[type=image]
+               margin: 0
+               padding: 0
+          input[type=text]
+               margin: 0
+               padding: 0
+               border: thin solid black
 
      #crumbs
           margin: 0.5em
