--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -9,6 +9,10 @@
      #logo
           %h1= link_to('Tenttiarkisto', root_url)
 
-#search Search comes here
-
+#search
+     
+     - form_tag search_path, :method => :get do
+          = text_field_tag :query
+          = image_submit_tag "mag.png"
+     
 #crumbs Here &gt; comes &gt; crumb
