Modified tests and search results to handle null values.

--- a/app/views/search/show.html.haml
+++ b/app/views/search/show.html.haml
@@ -1,5 +1,8 @@
 %h2= "Hakusi oli: #{@q}"
 
-%ul
-     - @result.each do |course|
-          %li= link_to course["name"] , exams_url(:course_id => course["course_id"])
+- if @result.empty?
+     %p= "Hakusi ei tuottanut tuloksia"
+- else
+     %ul
+          - @result.each do |course|
+               %li= link_to course["name"] , exams_url(:course_id => course["course_id"])
