--- a/app/stylesheets/_header.sass
+++ b/app/stylesheets/_header.sass
@@ -31,10 +31,14 @@ html, body
           input[type=image]
                margin: 0
                padding: 0
+               vertical-align: middle
           input[type=text]
                margin: 0
                padding: 0
                border: thin solid black
+               vertical-align: middle
 
+               
+               
      #crumbs
           margin: 0.5em
