--- a/app/views/layouts/exams.html.haml
+++ b/app/views/layouts/exams.html.haml
@@ -21,9 +21,9 @@
 
                     #tabs 
                          - tabs_tag do |tab|
-                              = tab.all 'Kaikki kokeet', exams_url(:course_id => 1)
-                              = tab.generate 'Generoi', generate_exams_url(:course_id => 1)
-                              = tab.new 'Lisää koe', new_exam_url(:course_id => 1)
+                              = tab.all all_exams, exams_url(:course_id => 1)
+                              = tab.generate generate_exam, generate_exams_url(:course_id => 1)
+                              = tab.new add_exam, new_exam_url(:course_id => 1)
 
 
                     #tab-content= (yield :content or yield)
