--- a/app/views/layouts/exams.html.haml
+++ b/app/views/layouts/exams.html.haml
@@ -20,6 +20,7 @@
                #content
 
                     #tabs 
+                         -# tabs_on_rails gem making tabs, the tab titles are defined in the helper
                          - tabs_tag do |tab|
                               = tab.all all_exams, exams_url(:course_id => 1)
                               = tab.generate generate_exam, generate_exams_url(:course_id => 1)
