Added titles for exams.

--- a/app/views/exams/new.html.haml
+++ b/app/views/exams/new.html.haml
@@ -1,1 +1,4 @@
-%h2 Laskennan mallit - Lisää uusi tentti
+- content_for :title do
+     Laskennan mallit :: Lisää
+- content_for :content do
+     %h2 Laskennan mallit - Lisää uusi tentti
