--- a/app/views/exams/show.html.haml
+++ b/app/views/exams/show.html.haml
@@ -1,3 +1,6 @@
-%h2 Laskennan mallit - Erilliskoe
+- content_for :title do
+     Laskennan mallit :: Erilliskoe
+- content_for :content do
+     %h2 Laskennan mallit - Erilliskoe
 
-%h3 Selitä äärellisestä automaatista
+     %h3 Selitä äärellisestä automaatista
