--- a/app/views/exams/generate.html.haml
+++ b/app/views/exams/generate.html.haml
@@ -1,1 +1,4 @@
-%h2 Laskennan mallit - Generoi harjoitustentti
+- content_for :title do
+     Laskennan mallit :: Generointi
+- content_for :content do
+     %h2 Laskennan mallit - Generoi harjoitustentti
