--- a/app/views/layouts/exams.html.haml
+++ b/app/views/layouts/exams.html.haml
@@ -11,6 +11,8 @@
           /[if IE]
                = stylesheet_link_tag 'ie.css', :media => 'screen, projection'
 
+          = javascript_include_tag 'crumbs'
+
      %body
 
           #container
