--- a/app/views/layouts/exams.html.haml
+++ b/app/views/layouts/exams.html.haml
@@ -4,7 +4,11 @@
      %head
 
           %link{ :rel => "shortcut icon", :href => "/favicon.ico", :type => "image/x-icon"}/
-          %title= yield :title
+          %title
+               - if yield :title
+                    = "Tenttiarkisto :: #{yield :title}"
+               - else
+                    Tenttiarkisto
 
           = stylesheet_link_tag 'screen-exam.css', :media => 'screen, projection'
           = stylesheet_link_tag 'print.css', :media => 'print'
