--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -1,10 +1,8 @@
-%h1
-     =t :courses
+%h2= t 'courses.title'
 
 %table#basic_studies
      %tr
-          %th 
-               =t :basic_studies
+          %th= t 'courses.levels.basic'
      %tr
           %td Ohjelmoinnin perusteet
           %td Generoi harjoitustentti
@@ -19,8 +17,7 @@
 
 %table#intermediate_studies
      %tr
-          %th
-               =t :intermediate_studies
+          %th= t 'courses.levels.intermediate'
      %tr
           %td Tietokoneen toiminta
           %td Generoi harjoitustentti
@@ -34,8 +31,7 @@
 
 %table#advanced_studies
      %tr
-          %th 
-               =t :advanced_studies
+          %th= t 'courses.levels.advanced'
      %tr
           %td XML-tietokannat
           %td Generoi harjoitustentti
@@ -50,8 +46,7 @@
 
 %table#other_studies
      %tr
-          %th
-               =t :other_studies
+          %th= t 'courses.levels.other'
      %tr
           %td TVT-ajokortti
           %td Generoi harjoitustentti
