--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,14 +5,14 @@
           #login
                - if session[:user_id].nil?
                     - form_for :session, :url => session_url do |f|
-                         - field_set_tag login_title do
-                              = f.label :username , user
+                         - field_set_tag t('pages.session.form.title') do
+                              = f.label :username, t('pages.session.form.username')
                               = f.text_field :username
-                              = f.label :password, passwd
+                              = f.label :password, t('pages.session.form.password')
                               = f.password_field :password
-                              = submit_tag login
+                              = submit_tag t('pages.session.form.submit')
                - else 
-                    = link_to logout, session_url, :method => :delete
+                    = link_to t('pages.session.logout'), session_url, :method => :delete
                               
           %ul#links
                %li= link_to('FAQ', faq_url)
