--- a/app/views/layouts/exams.html.haml
+++ b/app/views/layouts/exams.html.haml
@@ -22,9 +22,9 @@
                     #tabs 
                          -# tabs_on_rails gem making tabs, the tab titles are defined in the helper
                          - tabs_tag do |tab|
-                              = tab.all all_exams, exams_url(:course_id => 1)
-                              = tab.generate generate_exam, generate_exams_url(:course_id => 1)
-                              = tab.new add_exam, new_exam_url(:course_id => 1)
+                              = tab.all t('pages.exams.tabs.all'), exams_url(:course_id => 1)
+                              = tab.generate t('pages.exams.tabs.generate'), generate_exams_url(:course_id => 1)
+                              = tab.new t('pages.exams.tabs.add'), new_exam_url(:course_id => 1)
 
 
                     #tab-content= (yield :content or yield)
