Rakennetta hiukkasen muokattu, että osais css:llä virittää palikat paikalleen.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,6 +23,8 @@
 
                = render :partial => "layouts/header"
 
-               #content= (yield :content or yield)
+               = render :partial => "layouts/navi"
 
-               = render :partial => "layouts/footer"
+               = render :partial => "layouts/main"
+
+          = render :partial => "layouts/footer"
