--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -6,49 +6,23 @@
      %table#basic_studies
           %tr
                %th= t 'courses.levels.basic'
-          %tr
-               %td Ohjelmoinnin perusteet
-               %td Generoi harjoitustentti
-               %td Lisää tentti
-
-          %tr
-               %td Ohjelmistojen mallintaminen
-               %td Generoi harjoitustentti
-               %td Lisää tentti
-
+          
+          = render :partial => "courses", :locals => {:courses => @basic_studies}
 
      %table#intermediate_studies
           %tr
                %th= t 'courses.levels.intermediate'
-          %tr
-               %td Tietokoneen toiminta
-               %td Generoi harjoitustentti
-               %td Lisää tentti
 
-          %tr
-               %td= link_to('Laskennan mallit', exams_url(:course_id => 1))
-               %td= link_to("Generoi harjoitustentti", generate_exams_url(:course_id => 1))
-               %td= link_to("Lisää tentti",  new_exam_url(:course_id => 1))
-
-
+          = render :partial => "courses", :locals => {:courses => @intermediate_studies}
 
      %table#advanced_studies
           %tr
                %th= t 'courses.levels.advanced'
-          %tr
-               %td XML-tietokannat
-               %td Generoi harjoitustentti
-               %td Lisää tentti
 
-          %tr
-               %td Data mining
-               %td Generoi harjoitustentti
-               %td Lisää tentti
+          = render :partial => "courses", :locals => {:courses => @advanced_studies}
+
 
      %table#other_studies
           %tr
                %th= t 'courses.levels.other'
-          %tr
-               %td TVT-ajokortti
-               %td Generoi harjoitustentti
-               %td Lisää tentti
+          = render :partial => "courses", :locals => {:courses => @other_studies}
