Added exam queries from database. TODO: Tests

--- a/app/views/exams/generate.html.haml
+++ b/app/views/exams/generate.html.haml
@@ -1,4 +1,4 @@
 - content_for :title do
-     Laskennan mallit :: #{t 'pages.exams.titles.generate'}
+     #{@course.name} :: #{t 'pages.exams.titles.generate'}
 - content_for :content do
-     %h2= "Laskennan mallit - #{t 'pages.exams.titles.generate'}"
+     %h2= "#{@course.name} - #{t 'pages.exams.titles.generate'}"
