Styled front page.

--- a/app/stylesheets/_basic-style.sass
+++ b/app/stylesheets/_basic-style.sass
@@ -1,6 +1,8 @@
 @import compass/reset
 @import _header
 @import _footer
+@import _navi
+@import _main
 
 h1
      font:
@@ -15,5 +17,6 @@ h2
 @mixin content-style
      padding: 0.5em
      border: thin solid black
-     background:
-          color: green
+     font:
+          family: Verdana, Arial, Helvetica, sans-serif
+       
