--- a/app/stylesheets/_footer.sass
+++ b/app/stylesheets/_footer.sass
@@ -1,7 +1,8 @@
 #footer
-     clear: both
-     background:
-          color: gray
-     text:
-          align: center
-     padding: 0.5em
+     position: relative
+     width: auto
+     margin: 0, auto, 0, auto
+     background-color: #707070
+     padding: 4px, 0, 8px, 0
+     text-align: center
+     color: #ccc
