--- a/app/stylesheets/_header.sass
+++ b/app/stylesheets/_header.sass
@@ -2,43 +2,32 @@ html, body
      margin: 0
 
 #container
-     margin: 1em
+     position: relative
+     width: auto
+     margin: 0, auto
+     background: #fff
 
      #header
 
-          background:
-               color: blue
+          background: #e7b01f
+          height: 99px
+          
 
           #logo
-               background:
-                    color: red
                width: auto
+               float: left
+               a
+                    display: block
+                    text-decoration: none
+                    margin-top: 1em
+                    
 
-          #general
+
+          #login
                float: right
+               margin-right: 10px
+               padding: 5px
+               border: 2px solid
+         
 
-               #login
-                    background:
-                         color: purple
-               #links
-                    background:
-                         color: pink
-
-     #search
-          clear: both
-          padding:
-               top: 1em
-          input[type=image]
-               margin: 0
-               padding: 0
-               vertical-align: middle
-          input[type=text]
-               margin: 0
-               padding: 0
-               border: thin solid black
-               vertical-align: middle
-
-               
-               
-     #crumbs
-          margin: 0.5em
+     
