--- a/app/stylesheets/screen-exam.sass
+++ b/app/stylesheets/screen-exam.sass
@@ -10,14 +10,21 @@
           background:
                color: yellow
           ul
-               margin: 0
-               padding: 0
-               list-style-type: none
+               list-style: none
+               padding: .6em .6em 0 1.5em
                li
+                    padding: 0 0 .5em 0
+                    font-size: 120%
                     a
+                         display: block
+                         padding: 1px
+                         text-decoration: none
+                         color: #000
+                    &:hover
+                         text-decoration: underline
                    
 
      #tab-content
           @include content-style
           margin:
-               left = !tab-width + 1%
+               left = !tab-width
