--- a/app/views/layouts/_main.html.haml
+++ b/app/views/layouts/_main.html.haml
@@ -1,15 +1,17 @@
 #main
 
      #left
+     
+     #mainbody
 
-     #breadcrumb
-          %script{:type=> "text/javascript"} doCrumbs();
+          #breadcrumb
+               %script{:type=> "text/javascript"} doCrumbs();
 
-     #search          
-          - form_tag search_path, :method => :get do
-               = text_field_tag :query
-               = image_submit_tag "mag.png"
+          #search          
+               - form_tag search_path, :method => :get do
+                    = text_field_tag :query
+                    = image_submit_tag "mag.png"
 
-     #content= (yield :content or yield)
+          #content= (yield :content or yield)
 
      #right
