--- a/app/views/layouts/exams.html.haml
+++ b/app/views/layouts/exams.html.haml
@@ -22,17 +22,34 @@
           #container
 
                = render :partial => "layouts/header"
+               
+               = render :partial => "layouts/navi"
 
-               #content
+               #main
 
-                    #tabs 
+                    #left
                          -# tabs_on_rails gem making tabs
                          - tabs_tag do |tab|
                               = tab.all t('pages.exams.tabs.all'), exams_url(:course_id => 1)
                               = tab.generate t('pages.exams.tabs.generate'), generate_exams_url(:course_id => 1)
                               = tab.new t('pages.exams.tabs.add'), new_exam_url(:course_id => 1)
+               
+               
+                    #mainbody
+               
+                         #breadcrumb
+                              %script{:type=> "text/javascript"} doCrumbs();
+                    
+                         #search
+                              - form_tag search_path, :method => :get do
+                                   = text_field_tag :query
+                                   = image_submit_tag "mag.png"
 
 
-                    #tab-content= (yield :content or yield)
+                         #content
+
+                              #tab-content= (yield :content or yield)
+                         
+                    #right
 
                = render :partial => "layouts/footer"
