Fixed the tabs lining wrong bug.

--- a/app/stylesheets/_main.sass
+++ b/app/stylesheets/_main.sass
@@ -9,11 +9,12 @@
 
      #mainbody
 
-          clear: both
+          float: center
           background: #fff
           position: relative
           margin-left: 15%
           margin-right: 15%
+          margin-top: 2em
           
           padding: 1em 1.7% 4em
           border-left: 1px dashed #666
