Cleaned the sass code, and removed navi because FAQ is moving to footer.

--- a/app/stylesheets/_basic-style.sass
+++ b/app/stylesheets/_basic-style.sass
@@ -13,6 +13,10 @@ h2
           size: 160%
      text:
           align: center
+          
+h3
+     font:
+          size: 120%
 
 @mixin content-style
      padding: 0.5em
