--- a/app/stylesheets/_header.sass
+++ b/app/stylesheets/_header.sass
@@ -1,33 +1,27 @@
-html, body
-     margin: 0
+#header
 
-#container
-     position: relative
-     width: auto
-     margin: 0, auto
-     background: #fff
-
-     #header
-
-          background: #e7b01f
-          height: 99px
+     /* Background color and height of the header. Each area can overwrite their own background color. */
+     background: #e7b01f
+     height: 99px
+         
+     /* Tarkisto logo that works as a link to index. */
+     #logo
+          width: auto
+          float: left
+          display: block
+          margin: 35px 0 0 20px
           
-
-          #logo
-               width: auto
-               float: left
-               a
-                    display: block
-                    text-decoration: none
-                    margin-top: 1em
+          a
+               text-decoration: none
+               
                     
 
-
-          #login
-               float: right
-               margin-right: 10px
-               padding: 5px
-               border: 2px solid
+     /* Log-in area. */
+     #login
+          float: right
+          margin-right: 10px
+          padding: 5px
+          border: 2px solid
          
 
      
