--- a/app/views/layouts/_main.html.haml
+++ b/app/views/layouts/_main.html.haml
@@ -1,6 +1,12 @@
 #main
 
      #left
+          - if (@controller.controller_name == 'exams')
+               -# tabs_on_rails gem making tabs if the current page is one of the exams pages
+               - tabs_tag do |tab|
+                    = tab.all t('pages.exams.tabs.all'), exams_url(@course)
+                    = tab.generate t('pages.exams.tabs.generate'), generate_exams_url(@course)
+                    = tab.new t('pages.exams.tabs.add'), new_exam_url(@course)
      
      #mainbody
 
