--- a/app/views/layouts/_main.html.haml
+++ b/app/views/layouts/_main.html.haml
@@ -13,10 +13,7 @@
           #breadcrumb
                %script{:type=> "text/javascript"} doCrumbs();
 
-          #search          
-               - form_tag search_path, :method => :get do
-                    = text_field_tag :query
-                    = image_submit_tag "mag.png"
+          = render :partial => "layouts/search"
 
           #content= (yield :content or yield)
 
