Modified the exam view to hide/show the exams, and to sort them by type.

--- a/app/stylesheets/_main.sass
+++ b/app/stylesheets/_main.sass
@@ -62,6 +62,17 @@
                               font-size: 120%
                               padding: .5em 1em .5em .5em
                               
+               #examlists
+               
+                    margin-top: 2em
+                    
+                    h3
+                         margin: 0 6px 15px 6px
+               
+                    a
+                         text-decoration: underline
+                    table
+                         margin: 0px 6px 15px 6px
                
 
      #right
