--- a/app/views/layouts/exams.html.haml
+++ b/app/views/layouts/exams.html.haml
@@ -15,7 +15,7 @@
           /[if IE]
                = stylesheet_link_tag 'ie.css', :media => 'screen, projection'
 
-          = javascript_include_tag 'crumbs'
+          = javascript_include_tag 'crumbs', 'showhide'
 
      %body
 
