--- a/app/views/exams/_table.html.haml
+++ b/app/views/exams/_table.html.haml
@@ -4,7 +4,7 @@
      %table
           - exams.each do |exam|
                %tr
-                    %td= link_to exam.exam_type.name, exam_url(exam.course, exam)
+                    %td= link_to exam.type.name, exam_url(exam.course, exam)
                     %td= exam.date
                     %td= link_to "PDF", exam_url(exam.course, exam)
                     %td= link_to "TXT", exam_url(exam.course, exam)
