--- a/app/views/exams/index.html.haml
+++ b/app/views/exams/index.html.haml
@@ -10,17 +10,17 @@
                %a(onclick="showhide('course');" title="Näytä/piilota kaikki")
                     =t 'pages.exams.types.course-exams'
           #course
-               = render :partial => "table", :locals => {:exams => @course_exams}
+               = render :partial => "table", :locals => {:exams => @course.exams.course_exams}
      
           %h3
                %a(onclick="showhide('separate');" title="Näytä/piilota kaikki")
                     =t 'pages.exams.types.separate-exams'
           #separate
-               = render :partial => "table", :locals => {:exams => @separate_exams}
+               = render :partial => "table", :locals => {:exams => @course.exams.separate_exams}
      
      
           %h3
                %a(onclick="showhide('repeat');" title="Näytä/piilota kaikki")
                     =t 'pages.exams.types.repeat-exams'
           #repeat
-               = render :partial => "table", :locals => {:exams => @repeat_exams}
+               = render :partial => "table", :locals => {:exams => @course.exams.repeat_exams}
