--- a/app/views/exams/new.html.haml
+++ b/app/views/exams/new.html.haml
@@ -7,23 +7,18 @@
           %label{:for => :name}= t('pages.exams.forms.selection.name')
           = select_tag :name, options_for_select(exam_selection(@exams), 'new')
 
-     - form_for :exam, :url => exams_url do |f|
+     - form_for @exam, :url => exams_url do |f|
           %div
                = f.label :course, t('pages.exams.forms.newexam.course')
                %span#course{:name => :course}= @course.name
           %div
-               = f.label :exam_type, t('pages.exams.forms.newexam.type')
-               = select_tag :exam_exam_type, options_for_select(exam_type_selection(@exam_types))
+               = f.label :exam_type_id, t('pages.exams.forms.newexam.type')
+               = select_tag 'exam[exam_type_id]', options_for_select(exam_type_selection(@exam_types))
           %div
                = f.label :date, t('pages.exams.forms.newexam.date')
                = f.text_field :date
           %div
-               = f.label :lecturer, t('pages.exams.forms.newexam.lecturer')
-               = f.text_field :lecturer
-          %div
                = f.label :maximum_points, t('pages.exams.forms.newexam.maxpoints')
                = f.text_field :maximum_points
-          %div
-               = f.label :public, t('pages.exams.forms.newexam.public')
-               = f.check_box :public
+          %div= t('pages.exams.forms.newexam.public_notification')
           %div= submit_tag t('pages.exams.forms.newexam.continue')
