--- a/app/views/exams/show.html.haml
+++ b/app/views/exams/show.html.haml
@@ -1,6 +1,6 @@
 - content_for :title do
-     #{@course.name} :: #{@exam.exam_type.name}
+     #{@course.name} :: #{@exam.name}
 - content_for :content do
-     %h2 #{@course.name} - #{@exam.exam_type.name}
+     %h2 #{@course.name} - #{@exam.name}
 
      %h3 Selitä äärellisestä automaatista
