Refactored ExamsController#index to use nicer way of published exams.

--- a/app/views/exams/index.html.haml
+++ b/app/views/exams/index.html.haml
@@ -3,4 +3,4 @@
 - content_for :content do
      %h2= @course.name
 
-     = render :partial => "table", :locals => {:exams => @course.exams.published}
+     = render :partial => "table", :locals => {:exams => @exams}
