Added some sort of css layout. Should be something like the client asked for.

--- a/app/stylesheets/_footer.sass
+++ b/app/stylesheets/_footer.sass
@@ -1,8 +1,8 @@
 #footer
      position: relative
      width: auto
-     margin: 0, auto, 0, auto
+     margin: 0px auto 0px auto
      background-color: #707070
-     padding: 4px, 0, 8px, 0
+     padding: 4px 0px 8px 0px
      text-align: center
      color: #ccc
