--- a/app/views/exams/show.html.haml
+++ b/app/views/exams/show.html.haml
@@ -3,4 +3,5 @@
 - content_for :content do
      %h2 #{@course.name} - #{@exam.exam_type.name}
 
-     %h3 Selitä äärellisestä automaatista
+     %h3 Kysymys 1
+     %p Selitä ääreellisistä automaateista
