--- a/app/stylesheets/_header.sass
+++ b/app/stylesheets/_header.sass
@@ -6,22 +6,41 @@
          
      /* Tarkisto logo that works as a link to index. */
      #logo
-          width: auto
           float: left
-          display: block
-          margin: 35px 0 0 20px
-          
-          a
-               text-decoration: none
-               
-                    
+          margin: 35px 0 0 25px                    
 
      /* Log-in area. */
      #login
           float: right
-          margin-right: 10px
-          padding: 5px
-          border: 2px solid
-         
-
-     
+          margin: 20px 25px 0px 0px
+          font:
+               size: 80%
+          a
+               color: #ffffff
+               text-decoration: none
+               padding: 5px
+               letter-spacing: 0.1ex
+               font:
+                    weight: bold
+          a:hover
+               background-color: #cf9e1c
+          label
+               color: #ffffff
+               letter-spacing: 0.05ex
+          table
+               td
+                    padding: 4px 6px 0px 0px
+          input[type="text"], input[type="password"] 
+               background-color: #fdf7e9
+               border: 1px solid #cf9e1c
+               width: 100px
+               padding: 3px
+               letter-spacing: 0.15ex
+          input[type="text"]:focus, input[type="password"]:focus
+               background-color: #ffffff
+               border: 1px solid #b98d19
+          input[type="submit"]
+               background-color: #cf9e1c
+               border: 2px solid #b98d19
+               color: #fff
+               letter-spacing: 0.1ex
