--- a/app/stylesheets/_main.sass
+++ b/app/stylesheets/_main.sass
@@ -16,27 +16,27 @@
           
           ul
                list-style: none
-               
-               padding: .6em .6em 0 1.5em
+               padding: 1em 1em 0 1.5em
                li
-                    padding: 0 0 .5em 0
-                    font-size: 120%
+                    padding: 0em 0 1em 0
+                    /* font-size: 120% */
                     a
                          display: block
-                         padding: 1px
+                         padding: 7px
                          text-decoration: none
                          color: #000
-                    &:hover
-                         text-decoration: underline
+                         background-color: #e5e5e5
+                    a:hover
+                         background-color: #cccccc
                          
                /* Span is the active tab when tabs are made with TabsOnRails.*/
                span
                     font-weight: bold
-                    background-color: #e5e5e5
+                    display: block
+                    padding: 7px
+                    background-color: #666666
+                    color: #ffffff
                     
-                    a:hover
-                         text-decoration: none
-
 
      /* The middle part where crumbs, search and content go. */
      #mainbody
@@ -66,24 +66,45 @@
           
                /* Course tables and exam tables. They are named if they need to be styled differently. */
                table
+                    margin: 0px 0px 10px 0px
                     width: 100%
-                    border-width: 1px 1px 1px 1px
+                    /* border-width: 1px 1px 1px 1px */ 
                     border-spacing: 2px
                     border-style: solid
                     border-color: #000
-                    border-collapse: collapse
+                    border-collapse: collapse 
                     
                     tr
-                    
+
                          td
-                              border-width: 1px 1px 1px 1px
-                              padding: 3px 6px 3px 6px
-                              border-style: solid
-                              border-color: #000
+                              /* border-width: 1px 1px 1px 1px */
+                              /* padding: 3px 6px 3px 6px */
+                              /* border-style: solid */
+                              /* border-color: #000 */
+                              background-color: #f2f2f2
+                              padding: 7px
+                              border-bottom: 1px solid #cccccc
+                              border-right: 1px solid #cccccc
+                         td:hover
+                              background-color: #eaeaea
+                         .column1 /* eka sarake */
+                              width: 70%
+                         .column2 /* toka */
+                              text:
+                                   align: center
+                         .column3 /* kolmas */
+                              text:
+                                   align: center
                          th
-                              font-size: 120%
-                              padding: .5em 1em .5em .5em
-                              
+                              font-size: 115%
+                              padding: 1em .5em 1em .5em 
+
+               a
+                    color: #000
+                    text-decoration: none
+                    border-bottom: 1px dashed #cccccc
+               a:hover
+                    border-bottom: 1px solid #666666
                
      /* Empty right block. */
      #right
