--- a/app/stylesheets/_search.sass
+++ b/app/stylesheets/_search.sass
@@ -1,13 +1,25 @@
 #search
+     margin: 5px 0px 5px 0px
      padding:
           top: 1em
           bottom: 1em
+     .box
+          background-color: #ccc
+          width: 100%
+          height: 65px
+          margin: 0px auto 0px auto
      input[type=image]
           margin: 0
           padding: 0
           vertical-align: middle
      input[type=text]
-          margin: 0
-          padding: 0
+          margin: 10px
+          padding: 5px
+          width: 88%
+          letter-spacing: 0.15ex
           border: thin solid black
           vertical-align: middle
+          font-size: 120%
+          color: #666666
+     input[type=text]
+          background-color: #ffffff
