--- a/app/views/dashboard/_courses.html.haml
+++ b/app/views/dashboard/_courses.html.haml
@@ -1,9 +1,9 @@
 - courses.each do |course|
      %tr
-          %td
+          %td.column1
                = course.code
                = link_to "#{course.name}", exams_url(course)
                = "(#{course.credits} op)"
 
-          %td= link_to t('pages.dashboard.practice'), generate_exams_url(course)
-          %td= link_to t('pages.dashboard.addnew'), new_exam_url(course)
+          %td.column2= link_to t('pages.dashboard.practice'), generate_exams_url(course)
+          %td.column3= link_to t('pages.dashboard.addnew'), new_exam_url(course)
