--- a/app/views/layouts/exams.html.haml
+++ b/app/views/layouts/exams.html.haml
@@ -11,11 +11,12 @@
                     Tenttiarkisto
 
           = stylesheet_link_tag 'screen-exam.css', :media => 'screen, projection'
+          = stylesheet_link_tag 'ui-lightness/jquery-ui-1.8.2.custom.css', :media => 'screen, projection'
           = stylesheet_link_tag 'print.css', :media => 'print'
           /[if IE]
                = stylesheet_link_tag 'ie.css', :media => 'screen, projection'
 
-          = javascript_include_tag 'crumbs'
+          = javascript_include_tag 'locales', 'jquery-1.4.2.min', 'jquery-ui-1.8.2.custom.min', :defaults, 'examinput', 'crumbs'
 
      %body
 
