Added named_scopes to courses and fixed routes. Tests cause runtime error, needs fixing.

--- a/app/views/courses/basics.html.haml
+++ b/app/views/courses/basics.html.haml
@@ -4,8 +4,8 @@
 
      %p= link_to t('pages.courses.back'), root_url
 
-     %table
+     %table#basic_studies
           %tr
                %th= t 'courses.levels.basic'
           
-          = render :partial => "courses", :locals => {:courses => @courses}
+          = render :partial => "courses", :locals => {:courses => @courses.basic_courses}
