--- a/app/views/search/show.html.haml
+++ b/app/views/search/show.html.haml
@@ -8,4 +8,4 @@
      - else
           %ul
                - @result.each do |course|
-                    %li= link_to course["name"] , exams_url(:course_id => course["course_id"])
+                    %li= link_to course["name"] , course_exams_url(:course_id => course["course_id"])
