--- a/app/views/courses/intermediates.html.haml
+++ b/app/views/courses/intermediates.html.haml
@@ -4,7 +4,7 @@
 
      %p= link_to t('pages.courses.back'), root_url
 
-     %table
+     %table#intermediate_studies
           %tr
                %th= t 'courses.levels.intermediate'
           
