--- a/app/views/dashboard/_courses.html.haml
+++ b/app/views/dashboard/_courses.html.haml
@@ -2,8 +2,8 @@
      %tr
           %td
                = course.code
-               = link_to "#{course.name}", exams_url(course)
+               = link_to "#{course.name}", course_exams_url(course)
                = "(#{course.credits} op)"
 
-          %td= link_to t('pages.dashboard.practice'), generate_exams_url(course)
-          %td= link_to t('pages.dashboard.addnew'), new_exam_url(course)
+          %td= link_to t('pages.dashboard.practice'), generate_course_exams_url(course)
+          %td= link_to t('pages.dashboard.addnew'), new_course_exam_url(course)
