--- a/app/views/layouts/exams.html.haml
+++ b/app/views/layouts/exams.html.haml
@@ -30,9 +30,9 @@
                     #left
                          -# tabs_on_rails gem making tabs
                          - tabs_tag do |tab|
-                              = tab.all t('pages.exams.tabs.all'), exams_url(@course)
-                              = tab.generate t('pages.exams.tabs.generate'), generate_exams_url(@course)
-                              = tab.new t('pages.exams.tabs.add'), new_exam_url(@course)
+                              = tab.all t('pages.exams.tabs.all'), course_exams_url(@course)
+                              = tab.generate t('pages.exams.tabs.generate'), generate_course_exams_url(@course)
+                              = tab.new t('pages.exams.tabs.add'), new_course_exam_url(@course)
                
                
                     #mainbody
