Logo, rounder corners search, faq link

--- a/app/stylesheets/_footer.sass
+++ b/app/stylesheets/_footer.sass
@@ -6,3 +6,10 @@
      padding: 4px 0px 8px 0px
      text-align: center
      color: #ccc
+     a
+          color: #ccc
+          text-decoration: none
+          border-bottom: 1px dashed #ccc
+     a:hover
+          border-bottom: 1px solid #ccc
+          color: #fff
