--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,1 +1,4 @@
-#footer Copyright &copy; 2010 Tarkisto Developers
+#footer
+     %span= link_to('FAQ', faq_url)
+     %span | Copyright &copy; 2010 Tarkisto Developers 
+     
