--- a/app/stylesheets/_search.sass
+++ b/app/stylesheets/_search.sass
@@ -1,13 +1,14 @@
 #search
+     div#box
+          width: 80%
+          padding: 20px
+          margin: 0 auto
+          background: #efefef
+          color: #000
      margin: 5px 0px 5px 0px
      padding:
           top: 1em
           bottom: 1em
-     .box
-          background-color: #ccc
-          width: 100%
-          height: 65px
-          margin: 0px auto 0px auto
      input[type=image]
           margin: 0
           padding: 0
@@ -15,11 +16,18 @@
      input[type=text]
           margin: 10px
           padding: 5px
-          width: 88%
+          width: 80%
           letter-spacing: 0.15ex
-          border: thin solid black
+          border: thin solid #666666
           vertical-align: middle
           font-size: 120%
           color: #666666
-     input[type=text]
+          background-color: #f9f9f9
+     input[type=text]:focus
           background-color: #ffffff
+          border: thin solid black
+/*     .box */
+/*          background-color: #ccc */
+/*          width: 100% */
+/*          height: 65px */
+/*          margin: 0px auto 0px auto */
