--- a/app/views/layouts/_search.html.haml
+++ b/app/views/layouts/_search.html.haml
@@ -1,5 +1,5 @@
 #search
-     .box
+     #box
           - form_tag search_path, :method => :get do
-               = text_field_tag :query, "Tähän tulee pyöreät kulmat vielä!"
+               = text_field_tag :query
                = image_submit_tag "mag.png"
