--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,6 +16,13 @@
                = stylesheet_link_tag 'ie.css', :media => 'screen, projection'
 
           = javascript_include_tag 'crumbs'
+          = javascript_include_tag 'niftycube'
+
+          %script{:type=> "text/javascript"} 
+               window.onload=function(){
+               Nifty("div#box","big");
+               }
+		
 		
      %body
 
