--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -3,23 +3,5 @@
      #logo
           = link_to(image_tag("logo.png", :border => 0, :alt => "Tenttiarkisto", :title => "Tenttiarkisto"), root_url)
 
-     #login
-          %table
-               - if session[:user_id].nil?
-                    - form_for :session, :url => session_url do |f|
-                         - field_set_tag do
-                              %tr
-                                   %td
-                                        = f.label :username , t('pages.session.form.username')
-                                   %td
-                                        = f.label :password, t('pages.session.form.password')
-                              %tr
-                                   %td
-                                        = f.text_field :username
-                                   %td
-                                        = f.password_field :password
-                                   %td
-                                        = submit_tag t('pages.session.form.submit')
-               - else 
-                    = link_to t('pages.session.logout'), session_url, :method => :delete
+     #login= render :partial => "layouts/login"
 
