Added logged in information.

--- a/app/stylesheets/_header.sass
+++ b/app/stylesheets/_header.sass
@@ -50,3 +50,7 @@
 
           .notifications
                color: green
+
+          .title
+               font:
+                    weight: bold
