Added question form resizing.

--- a/app/stylesheets/_basic-style.sass
+++ b/app/stylesheets/_basic-style.sass
@@ -3,6 +3,7 @@
 @import _footer
 @import _main
 @import _search
+@import _examinput
 
 body
      font:
@@ -35,4 +36,3 @@ h3
      /* border: thin solid black */
      font:
           family: Verdana, Arial, Helvetica, sans-serif
-       
