modified search view, course model and course tests

--- a/app/views/search/show.html.haml
+++ b/app/views/search/show.html.haml
@@ -1,11 +1,11 @@
 - content_for :title do
-     = "Haku :: #{@q}"
+     = "Haku :: #{@p}"
 - content_for :content do
-     %h2= "Hakusi oli: #{@q}"
+     %h2= "Hakusi oli: #{@p}"
 
      - if @result.empty?
           %p= "Hakusi ei tuottanut tuloksia"
      - else
           %ul
                - @result.each do |course|
-                    %li= link_to course["name"] , exams_url(:course_id => course["course_id"])
+                    %li= link_to course.name, exams_url(course.id)
