Added JSON-stuff and exam functionality for exam input.

--- a/app/views/exams/edit.html.haml
+++ b/app/views/exams/edit.html.haml
@@ -11,7 +11,7 @@
      #questions
           %ul
                %li
-                    = link_to 'Question 1', 'questions/1'
+                    = link_to 'Question 1', '#questions-1'
                     %a(href="#remove")
                          %span.ui-icon.ui-icon-close Remove Tab
                %li
